fixed dark mode

--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+  background-color: white; /* Your desired background color */
+  color: black; /* Your desired text color */
+}
+
 .swiper {
   width: 100%;
   height: 100%;
